Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14734

Android : cannot compile example QtQuick2 extension plugin

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.5.0-rc1
    • Qt Creator 3.4.2
    • Android Support
    • None
    • Windows 7 64bits
      Android armv7
      Qt 5.5.0-0 (enterprise package)
      Qt Path : W:\tools\exec\Qt\5.5.0-ent
      Project Path : G:\travaux\qt

      I get this message when compiling the basic example template for QtQuick2 extension plugin.
      "10:02:00: Internal Error: Unknown Android deployment JSON file location.
      Error while building/deploying project test13 (kit: Android for armeabi-v7a (GCC 4.9, Qt 5.5.0))
      When executing step "Build Android APK""

      To get that:
      Create a new project : File => New project
      Choose the lib template : Library => Qt Quick 2 Extension plugin
      Choose the name and the kit (5.5.0 enterprise)
      Use the defaults names : next, finish
      Build project and the compilation fails.

        For Gerrit Dashboard: QTCREATORBUG-14734
        # Subject Branch Project Status CR V

            dt Daniel Teske
            julienw Julien W
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes