Android: Make library projects building skip apk packaging

There are use cases for building libraries, and this makes
them buildable by default.

Task-number: QTCREATORBUG-14734
Task-number: QTCREATORBUG-14710
Change-Id: I36a29a8c5aa23fa21213a05e512a7bd126f00c81
Reviewed-by: BogDan Vatra <bogdan@kde.org>